--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Merriweather:ital,wght@0,400;0,700;1,400&family=Fira+Code&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto+Mono&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="note.png" type="image/png">
+    <script src="https://cdn.jsdelivr.net/npm/puter@2.0.0/dist/puter.min.js"></script>
 </head>
 <body>
     <!-- Loading Screen -->
